# sjezd-rest-api

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  sqlx-data.json
curl/: curl_new_user.sh  new_user.json
migrations/2022-07-12-210349_create_usr/: down.sql  up.sql
migrations/2022-07-12-223447_rename_table_usr_ot_usrs/: down.sql  up.sql
migrations/2022-07-13-205945_usr_add_column_active/: down.sql  up.sql
migrations/2022-08-06-200801_alter_usrs_timestamp_cols/: down.sql  up.sql
migrations/2022-08-07-110317_add_usrs_name_index_uniq/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: connection.rs
src/models/: mod.rs  usrs.rs
src/routes/: config.rs  mod.rs  usrs.rs
templates/: base.tera  config.tera  index.html.tera  index.tera  nav.tera
