[package]
name = "sjezd-rest-api"
version = "0.0.1"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
diesel = { version="1.4.8", features=["postgres", "chrono"]}
# rocket_sync_db_pools = { version="0.1.0-rc.2", features=["diesel_postgres_pool"]}
# dotenv = "0.15.0"
diesel_migrations = "1.3"
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "chrono", "offline" ] }


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]


